@@ -19,6 +19,7 @@ package com.vaadin.flow.server.frontend;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Collections;
 
 import org.apache.commons.io.FileUtils;
@@ -100,8 +101,9 @@ public class TaskGenerateReactFilesTest {
         TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
         task.execute();
 
-        String layoutsContent = FileUtils.readFileToString(
-                new File(options.getFrontendGeneratedFolder(), "layouts.json"));
+        String layoutsContent = Files.readString(
+                new File(options.getFrontendGeneratedFolder(), "layouts.json")
+                        .toPath());
 
         Assert.assertEquals("[{\"path\":\"/test\"}]", layoutsContent);
 
@@ -109,7 +111,7 @@ public class TaskGenerateReactFilesTest {
 
     @Test
     public void routesContainImportAndUsage_serverSideRoutes_noExceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import HelloWorldView from 'Frontend/views/helloworld/HelloWorldView.js';
                         import MainLayout from 'Frontend/views/MainLayout.js';
@@ -139,11 +141,7 @@ public class TaskGenerateReactFilesTest {
                             .build();
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        task.execute();
+        executeTask(content);
     }
 
     @Test
@@ -153,14 +151,8 @@ public class TaskGenerateReactFilesTest {
                          import { serverSideRoutes } from 'Frontend/generated/flow/Flow';
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -172,19 +164,13 @@ public class TaskGenerateReactFilesTest {
                          ] as RouteObject[];
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
     public void routesContainMultipleFlowImports_noExceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import HelloWorldView from 'Frontend/views/helloworld/HelloWorldView.js';
                         import MainLayout from 'Frontend/views/MainLayout.js';
@@ -210,16 +196,12 @@ public class TaskGenerateReactFilesTest {
                         export default createBrowserRouter(routes);
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        task.execute();
+        executeTask(content);
     }
 
     @Test
     public void routesMissingImportAndUsage_noBuildOrServerSideRoutes_exceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import HelloWorldView from 'Frontend/views/helloworld/HelloWorldView.js';
                         import MainLayout from 'Frontend/views/MainLayout.js';
@@ -244,14 +226,8 @@ public class TaskGenerateReactFilesTest {
                         export default createBrowserRouter(routes);
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -281,14 +257,8 @@ public class TaskGenerateReactFilesTest {
                         export default createBrowserRouter(routes);
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -360,14 +330,8 @@ public class TaskGenerateReactFilesTest {
                             .build();
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(TaskGenerateReactFiles.MISSING_ROUTES_EXPORT,
-                exception.getMessage());
+        assertTaskExecutionFails(content,
+                TaskGenerateReactFiles.MISSING_ROUTES_EXPORT);
     }
 
     @Test
@@ -400,14 +364,8 @@ public class TaskGenerateReactFilesTest {
                             .build();
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -422,14 +380,8 @@ public class TaskGenerateReactFilesTest {
                             .build();
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -443,14 +395,8 @@ public class TaskGenerateReactFilesTest {
                             .build();
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(String.format(TaskGenerateReactFiles.NO_IMPORT,
-                routesTsx.getPath()), exception.getMessage());
+        assertTaskExecutionFails(content, String
+                .format(TaskGenerateReactFiles.NO_IMPORT, routesTsx.getPath()));
     }
 
     @Test
@@ -503,7 +449,7 @@ public class TaskGenerateReactFilesTest {
 
     @Test
     public void routesContainExport_noConst_noExceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import { RouterConfigurationBuilder } from '@vaadin/hilla-file-router/runtime.js';
                         import Flow from 'Frontend/generated/flow/Flow';
@@ -516,16 +462,12 @@ public class TaskGenerateReactFilesTest {
                         export { router, routes }
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        task.execute();
+        executeTask(content);
     }
 
     @Test
     public void routesContainExport_twoSingleExports_noExceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import { RouterConfigurationBuilder } from '@vaadin/hilla-file-router/runtime.js';
                         import Flow from 'Frontend/generated/flow/Flow';
@@ -540,16 +482,12 @@ public class TaskGenerateReactFilesTest {
                         export {router}
                 """;
 
-        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
-
-        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
-
-        task.execute();
+        executeTask(content);
     }
 
     @Test
     public void routesContainExport_oneSingleExport_exceptionThrown()
-            throws IOException, ExecutionFailedException {
+            throws IOException {
         String content = """
                         import { RouterConfigurationBuilder } from '@vaadin/hilla-file-router/runtime.js';
                         import Flow from 'Frontend/generated/flow/Flow';
@@ -562,16 +500,32 @@ public class TaskGenerateReactFilesTest {
                         export { routes }
                 """;
 
+        assertTaskExecutionFails(content,
+                String.format(TaskGenerateReactFiles.MISSING_ROUTES_EXPORT,
+                        routesTsx.getPath()));
+    }
+
+    private void assertTaskExecutionFails(String content, String errorMessage)
+            throws IOException {
         FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
 
         TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
 
-        Exception exception = Assert.assertThrows(
-                ExecutionFailedException.class, () -> task.execute());
-        Assert.assertEquals(
-                String.format(TaskGenerateReactFiles.MISSING_ROUTES_EXPORT,
-                        routesTsx.getPath()),
-                exception.getMessage());
+        Exception exception = Assert
+                .assertThrows(ExecutionFailedException.class, task::execute);
+        Assert.assertEquals(errorMessage, exception.getMessage());
+    }
+
+    private void executeTask(String content) throws IOException {
+        FileUtils.write(routesTsx, content, StandardCharsets.UTF_8);
+        TaskGenerateReactFiles task = new TaskGenerateReactFiles(options);
+        try {
+            task.execute();
+        } catch (ExecutionFailedException e) {
+            throw new AssertionError(
+                    "Expected execution to complete successfully, but exception was thrown",
+                    e);
+        }
     }
 
     @Tag("div")
